contributed by Joerg Baumann.

Added wxProcess and support for it to wxExecute.  wxProcess lets you
get notified when an asyncronous child process terminates, and also to
get input/output streams for the child process's stdout, stderr and
stdin.

Removed the old python sizers.

Added __add__, __sub__ and __cmp__ (equality check only) for wxPoint
and wxRealPoint.



New in 2.2.1
------------

Various tweaks, fixes, missing methods, etc.

Added example use of wxTaskBarIcon to the demo.



New in 2.2.0
------------

Added wxLog and friends.

Added wxFrame.ShowFullScreen for MSW.

Added PyShellWindow to the wxPython.lib package.



New in 2.1.16
-------------

Added an attribute named labelDelta to the generic buttons that
specifies how far to offset the label when the button is in the
depressed state.

Added wxTipProvider and friends.  See the demo for an example.

wxGrid can now change the cell highlight colour.

Added wxDragImage.

Fixed printing on wxGTK.

Added wxDateTime, wxTimeSpan, and wxDateSpan to wxPython.utils.

Added wxCalendarCtrl.

WARNING: A while back I asked what should be done about the Magic
Method Names.  (Methods that are automatically turned into event
handlers by virtue of their name.)  The consensus was that it is more
confusing to have them than to try and expand them to have greater
coverage.  I am finally getting around to removing the code that
generates the event binding.  This means that if you are using any of
the following method names without a EVT_* call that you need to
modify your code to add the EVT_* to hook the event to the method.

    OnChar
    OnSize
    OnEraseBackground
    OnSysColourChanged
    OnInitDialog
    OnPaint
    OnIdle
    OnActivate
    OnMenuHighlight
    OnCloseWindow
    OnScroll

Added wxSpinCtrl.




New in 2.1.15
-------------

Fixed wxTreeCtrl.HitTest to return both the tree item as well as the
flags that clairify where the click was in relation to the item.
