@@ -218,18 +218,18 @@ B. Change to the root wxPython directory and look at the setup.py
 		       will be executed to regenerate the wrapper C++
 		       and shadow python files.
 
-	   IN_CVS_TREE If you using the CVS version of the wxWindows
-		       and wxPython sources then you will need to set
-		       this flag to non-zero.  This is needed because
-		       some source files from the wxWindows tree are
-		       copied to be under the wxPython tree in order
-		       to keep Distutils happy.  With this flag set
-		       then setup.py will automatically keep these
-		       copied sources up to date if the original
-		       version is ever updated.  If you are using the
-		       tar.gz version of the Python sources then these
-		       copied sources are already present in your
-		       source tree.
+	   IN_CVS_TREE If you are using the CVS version of the
+		       wxWindows and wxPython sources then you will
+		       need to set this flag to non-zero.  This is
+		       needed because some source files from the
+		       wxWindows tree are copied to be under the
+		       wxPython tree in order to keep Distutils happy.
+		       With this flag set then setup.py will
+		       automatically keep these copied sources up to
+		       date if the original version is ever updated.
+		       If you are using the tar.gz version of the
+		       Python sources then these copied sources are
+		       already present in your source tree.
 
 
 C. To build and install wxPython you simply need to execute the
